--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,21 @@ a:hover {
   width: 10px;
   height: 10px;
 }
+#article .small-article,
+#article .big-article {
+  border-bottom: 1px solid #e0e0e0;
+  margin-bottom: 0.7em;
+}
+#article .big-article .article-title {
+  width: fit-content;
+  padding: 0.4em;
+  font-size: 10pt;
+}
+#article .big-article .article-header {
+  font-size: 12pt;
+  line-height: 13pt;
+  padding: 0;
+}
 .small-article {
   display: flex;
   flex-direction: row;
@@ -299,10 +314,10 @@ header {
   background-position: 0 0;
 }
 .odnoklasniki {
-  background-position: -30px 0;
+  background-position: -31px 0;
 }
 .telegram {
-  background-position: -60px 0;
+  background-position: -62px 0;
 }
 .twitter {
   background-position: -93px 0;
@@ -725,32 +740,40 @@ header {
   width: 25px;
   height: 25px;
 }
-#main .breaking-news-banner {
+#main .breaking-news-banner,
+#article .breaking-news-banner {
   background-color: #ffd100;
   color: #000000;
   justify-content: start;
 }
-#main .breaking-news-banner #breaking-news-text {
+#main .breaking-news-banner #breaking-news-text,
+#article .breaking-news-banner #breaking-news-text {
   color: #000000;
 }
-#main .news-alert-banner {
+#main .news-alert-banner,
+#article .news-alert-banner {
   background-color: #e50000;
   color: #fffdff;
 }
-#main .news-alert-banner #news-alert-right-arrow {
+#main .news-alert-banner #news-alert-right-arrow,
+#article .news-alert-banner #news-alert-right-arrow {
   background-position: -165px -80px;
 }
-#main .news-alert-banner #news-alert-text {
+#main .news-alert-banner #news-alert-text,
+#article .news-alert-banner #news-alert-text {
   color: #fffdff;
 }
-#main .rlive-news-banner {
+#main .rlive-news-banner,
+#article .rlive-news-banner {
   background-color: #009d8d;
   color: #000000;
 }
-#main .rlive-news-banner #rlive-news-right-arrow {
+#main .rlive-news-banner #rlive-news-right-arrow,
+#article .rlive-news-banner #rlive-news-right-arrow {
   background-position: -165px -80px;
 }
-#main .rlive-news-banner #rlive-news-text {
+#main .rlive-news-banner #rlive-news-text,
+#article .rlive-news-banner #rlive-news-text {
   color: #fffdff;
 }
 .rlive-news-banner,
@@ -831,8 +854,181 @@ header {
 /*=============================================
 =            Headline            =
 =============================================*/
+.realitatea-tv-subclass {
+  display: block;
+  padding-bottom: 2em;
+}
+.headline-article {
+  font-weight: 600;
+  font-family: "Inter", san-serif;
+  color: black;
+}
+.headline-article #two-line-actualitate {
+  position: relative;
+  padding: 0.5em 0;
+}
+.headline-article #two-line-actualitate .section-dot {
+  position: absolute;
+  top: 55%;
+  left: 55%;
+  right: unset;
+}
+.headline-article #main-article-image {
+  width: 95%;
+}
+.headline-article .content-image {
+  width: 100%;
+  margin: 1em 0;
+}
+.headline-article .options,
+.headline-article .article-tags {
+  display: flex;
+}
+.headline-article .options .option,
+.headline-article .article-tags .option,
+.headline-article .options .tag,
+.headline-article .article-tags .tag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5em;
+  margin: 0.5em;
+  border: 1px solid #bcbcbc;
+  border-radius: 10px;
+  font-size: 12pt;
+  transition: 0.2s ease-in-out;
+}
+.headline-article .options .option:hover,
+.headline-article .article-tags .option:hover,
+.headline-article .options .tag:hover,
+.headline-article .article-tags .tag:hover {
+  background-color: #f2f2f2;
+}
+.headline-article .options .icon {
+  background-size: 300px;
+  width: 35px;
+  height: 35px;
+  margin: 0 5px;
+}
+.headline-article .options .comment {
+  background-position: -73px -223px;
+}
+.headline-article .options .google-news {
+  background-position: -113px -223px;
+}
+.headline-article .comment-div {
+  background-color: #f9f9f9;
+  border: 1px solid #bcbcbc;
+  padding: 0.5em;
+  border-radius: 20px;
+  width: fit-content;
+  overflow: hidden;
+  margin-left: 10px;
+}
+.headline-article .comment-section {
+  display: flex;
+  margin: 2em 0;
+}
+.headline-article .comment-section img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+.headline-article .comment-section textarea {
+  background-color: #f9f9f9;
+  outline: none;
+  resize: none;
+  border: none;
+}
+.headline-article .comment-section textarea::-webkit-scrollbar {
+  cursor: default;
+  width: 5px;
+  padding-right: 10px;
+}
+.headline-article .comment-section textarea::-webkit-scrollbar-track {
+  background: transparent;
+}
+.headline-article .comment-section textarea::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: #dfdfdf;
+}
+.headline-article .comment-section textarea::-webkit-scrollbar-thumb:hover {
+  background: #d5d5d5;
+}
+.headline-article .article-content {
+  margin-top: 2em;
+  font-size: 12pt;
+  line-height: 15pt;
+  color: #201f1f;
+}
+.headline-article .contact-options {
+  flex-direction: column;
+}
+.headline-article .contact-options .icon {
+  background-size: 300px;
+  width: 30px;
+  height: 30px;
+}
+.headline-article .contact-options .twitter {
+  background-position: -112px 0;
+}
+.headline-article .contact-options .telegram {
+  background-position: -75px 0;
+}
+.headline-article .contact-options .odnoklasniki {
+  background-position: -38px 0;
+}
+.headline-article .contact-options .contact-text {
+  margin-bottom: 0.5em;
+}
+.headline-article .contact-options a {
+  margin: 3px;
+}
+.headline-article .article-details {
+  display: flex;
+  color: #bbbbbb;
+  font-size: 10pt;
+}
+.headline-article .article-details .date-time {
+  margin-left: 0.3em;
+  color: black;
+}
+.headline-article .section-logo {
+  padding: 1em 0;
+}
+.headline-article .title {
+  font-size: 30pt;
+}
+.headline-article ul {
+  font-size: 8pt;
+  width: 100%;
+  margin: 0;
+}
+.headline-article ul li:first-child {
+  list-style-type: none;
+  padding-left: 0;
+}
+.headline-article ul li {
+  padding-left: 0.3em;
+  list-style-type: ">";
+}
+.headline-article ul li:hover {
+  color: #666666;
+}
+.headline-article ul li.selected {
+  color: #b2b2b2;
+}
+.headline-article .realitatea-col {
+  margin-top: -160px;
+}
 .headline-news {
   margin-top: 10px;
+}
+.headline-news .small-news-block {
+  height: 200px;
+}
+.headline-news .adblock {
+  margin-top: 20px;
 }
 .category-text,
 .category-dot {
@@ -867,7 +1063,7 @@ header {
 }
 .article-brief {
   font-family: "Inter", san-serif;
-  color: #686868;
+  color: #bbbbbb;
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
@@ -991,6 +1187,32 @@ header {
 /*=============================================
 =            Actualitate            =
 =============================================*/
+#article .actualitate > .row {
+  align-items: unset;
+}
+#article .actualitate .big-article {
+  height: 360px;
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+  border-bottom: 1px solid #e0e0e0;
+}
+#article .actualitate .big-article .article-header {
+  font-size: 15pt;
+}
+#article .actualitate .small-article {
+  align-items: flex-end;
+}
+#article .actualitate .small-article .article-title {
+  left: 39.5%;
+}
+#article .actualitate .small-article .article-header {
+  padding-right: 0;
+  padding-left: 1.2em;
+  margin: 0;
+}
+#article .actualitate .small-article img {
+  width: 35%;
+}
 .actualitate {
   margin-bottom: 5em;
 }
@@ -1014,7 +1236,7 @@ header {
   font-family: "Inter", san-serif;
   font-weight: 600;
   padding-bottom: 1em;
-  border-bottom: 2px solid #c6c6c6;
+  border-bottom: 1px solid #e0e0e0;
 }
 .article > * {
   display: flex;
@@ -1042,28 +1264,52 @@ header {
 /*=============================================
 =            Sub Economie            =
 =============================================*/
+.recomandam,
 .sub-economie {
   background-color: #efefef;
   padding: 2em 0;
 }
+.recomandam .small-article,
 .sub-economie .small-article {
-  flex: 0 0 27.5%;
-  max-width: 27.5%;
   margin: 2em 0;
 }
+.recomandam .small-article a,
 .sub-economie .small-article a {
   display: flex;
   align-items: center;
 }
+.recomandam .small-article img,
 .sub-economie .small-article img {
   width: 45%;
 }
+.recomandam .small-article .article-header,
 .sub-economie .small-article .article-header {
   padding-left: 15px;
   padding-right: 25px;
 }
+.recomandam .small-article .article-title,
 .sub-economie .small-article .article-title {
   left: 50%;
+}
+#article .recomandam .small-article {
+  border: none;
+}
+.recomandam {
+  background-color: transparent;
+  padding-top: 0;
+  margin-top: 0;
+}
+.recomandam .section-logo,
+.recomandam hr {
+  width: 86.5%;
+}
+.recomandam hr {
+  border: 1px solid #e0e0e0;
+}
+.recomandam .section-logo {
+  margin: auto;
+  padding-bottom: 0;
+  padding-top: 0;
 }
 /*=====  End of Sub Economie  ======*/
 .economie .logo-row,
@@ -1095,7 +1341,7 @@ header {
 }
 .politica .big-article {
   height: 330px;
-  border-bottom: 2px solid #c6c6c6;
+  border-bottom: 1px solid #e0e0e0;
   margin-bottom: 1em;
   padding-bottom: 1em;
 }
@@ -1156,7 +1402,7 @@ header {
 .economie .small-article,
 .in-lume .small-article,
 .life .small-article {
-  border-bottom: 2px solid #c6c6c6;
+  border-bottom: 1px solid #e0e0e0;
   margin-bottom: 0.3em;
 }
 .societate .small-article img,
@@ -1206,7 +1452,7 @@ header {
   flex-direction: row;
   align-items: center;
   position: relative;
-  border-bottom: 2px solid #c6c6c6;
+  border-bottom: 1px solid #e0e0e0;
   padding: 1em;
 }
 .opinii .opinions li img {
@@ -1277,7 +1523,7 @@ header {
   font-weight: 600;
 }
 .opinii .zodiac-article .zodiac-description {
-  color: #686868;
+  color: #bbbbbb;
   font-size: 10pt;
   line-height: 13pt;
   padding: 2em 0;
@@ -1350,8 +1596,8 @@ header {
   flex-wrap: wrap;
   width: 85%;
   margin: auto;
-  border-bottom: 2px solid #c6c6c6;
-  border-top: 2px solid #c6c6c6;
+  border-bottom: 1px solid #e0e0e0;
+  border-top: 1px solid #e0e0e0;
 }
 .social-networks ul,
 .top-tags ul {
@@ -1451,7 +1697,7 @@ header {
   flex-direction: column;
 }
 .auto-tech-sport subsection ul .small-article {
-  border-bottom: 2px solid #c6c6c6;
+  border-bottom: 1px solid #e0e0e0;
   padding-bottom: 5%;
 }
 .auto-tech-sport subsection ul img {
@@ -1485,7 +1731,7 @@ header {
 }
 .toate-stirile hr {
   margin-top: 4em;
-  border: 1px solid #c6c6c6;
+  border: 1px solid #e0e0e0;
   flex: 0 0 82.5%;
   max-width: 82.5%;
 }
@@ -1597,16 +1843,26 @@ footer .copyright-text {
     font-size: 11pt;
   }
 }
+@media screen and (min-width: 1210px) {
+  .recomandam .small-article,
+  .sub-economie .small-article {
+    flex: 0 0 27.5%;
+    max-width: 27.5%;
+  }
+}
+@media screen and (min-width: 991.98px) and (max-width: 1210px) {
+  .recomandam .small-article,
+  .sub-economie .small-article {
+    flex: 0 0 32%;
+    max-width: 32%;
+  }
+}
 @media screen and (min-width: 10px) and (max-width: 1210px) {
   .navbar {
     padding-left: 1em;
   }
   .navbar li a {
     font-size: 10pt;
-  }
-  .sub-economie .small-article {
-    flex: 0 0 32%;
-    max-width: 32%;
   }
   .realitatea-tv .call-to-action {
     right: 20%;
@@ -1992,17 +2248,18 @@ footer .copyright-text {
     font-size: 13pt;
     line-height: 14pt;
   }
+  .headline-news {
+    margin-bottom: 0.5em;
+  }
   .headline-news .small-news-block {
     padding-right: 0;
+    height: unset;
   }
   .banners {
     margin-top: 5em;
   }
-  .headline-news {
-    margin-bottom: 0.5em;
-  }
   .opinii .opinions li {
-    border-bottom: 2px solid #dbdbdb;
+    border-bottom: 1px solid #dbdbdb;
   }
   .opinii .opinions li .opinion-name {
     line-height: 14pt;
@@ -2127,9 +2384,11 @@ footer .copyright-text {
   .bani .article-header {
     font-size: 13pt;
   }
+  .recomandam .small-article,
   .sub-economie .small-article {
     padding: 1em;
   }
+  .recomandam .small-article .article-title,
   .sub-economie .small-article .article-title {
     left: 48.5%;
   }
@@ -2232,8 +2491,9 @@ footer .copyright-text {
   .social-networks {
     border-top: none;
     width: unset;
-    padding-bottom: 1em;
+    padding: 1em 0;
     margin: 0 0.8em;
+    border-top: 1px solid #dbdbdb;
     border-bottom: 1px solid #dbdbdb;
   }
   .social-networks ul {
@@ -2408,6 +2668,54 @@ footer .copyright-text {
     color: #c8c8c8;
     font-size: 12px;
     text-align: center;
+  }
+  .headline-article #main-article-image {
+    width: 100vw;
+  }
+  .article-content {
+    padding: 0;
+  }
+  .article-content .row {
+    margin: 0;
+  }
+  .headline-article .realitatea-col {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+    padding-top: 2em;
+    border-top: 1px solid #dbdbdb;
+    border-bottom: 1px solid #dbdbdb;
+  }
+  .headline-article .realitatea-col .adblock {
+    width: 80%;
+  }
+  .headline-article .realitatea-col .adblock .icon {
+    right: 5%;
+  }
+  .headline-article .row,
+  .headline-article .container {
+    padding: 0;
+    margin: 0;
+  }
+  .headline-article .container {
+    margin: auto;
+  }
+  .headline-article .content-text {
+    padding: 2em 0;
+  }
+  .headline-article .tag,
+  .headline-article .option {
+    background-color: white;
+  }
+  #article .recomandam {
+    flex-direction: column;
+  }
+  #article .recomandam .section-logo {
+    padding-left: 0.9em;
+  }
+  #article .recomandam .small-article {
+    border-bottom: 1px solid #dbdbdb;
+    margin: 0.5em 3em;
   }
 }
 /*=====  End of Media queries  ======*/
