Changed the header line height in actualitate section in article.html

--- a/css/style.css
+++ b/css/style.css
@@ -1198,6 +1198,7 @@ header {
 }
 #article .actualitate .big-article .article-header {
   font-size: 15pt;
+  line-height: 17pt;
 }
 #article .actualitate .small-article {
   align-items: flex-end;
