--- a/css/style.less
+++ b/css/style.less
@@ -1506,6 +1506,7 @@ header {
   }
   .big-article .article-header {
     font-size: 15pt;
+    line-height: 17pt;
   }
   .small-article {
     align-items: flex-end;
