--- a/css/style.less
+++ b/css/style.less
@@ -1629,6 +1629,7 @@ header {
   }
 
   padding-top: 0;
+  padding-bottom: 0;
   margin-top: 0;
 }
 
@@ -3239,6 +3240,10 @@ footer {
       border-bottom: 1px solid @separation-line-color-mobile;
       margin: 0.5em 3em;
     }
+  }
+  .adblock {
+    width: 100%;
+    height: auto;
   }
 }
 
